--- a/Proyecto-Integrador-master/src/css/vista-admi.css
+++ b/Proyecto-Integrador-master/src/css/vista-admi.css
@@ -11,17 +11,156 @@
 
 /*GESTION ADMINISTRADOR*/
 
+body{
+    background-color: #d4e3fc;
+}
+.formulario{
+    position: absolute;
+    top: 17%;
+    left: 30%;
+    box-sizing: border-box;
+    width: 600px;
+    height: 650px;
+    background: white;
+    padding: 20px 35px;
+    border: 1px solid;
+    border-color: rgba(249, 247, 247, 0.521);
+    border-width: 1px;
+    border-radius: 5px;
+}
+.formulario h2{
+    font-size: 30px;
+    text-align: center;
+}
+.form-titulo{
+    background: #d4e3fc;
+    color: rgb(0, 0, 0);
+    padding: 8px;
+    text-align: center;
+    font-weight: 100%;
+    font-size: 24px;
+    border-radius: 7px 7px 7px 7px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
 
+
+ #name{
+    position: absolute;
+    top: 16%;
+    left: 5.7%;
+    width: 40%;
+    height: 8%;
+    border: none;
+    background-color: none;
+    border-bottom: 1px solid black;
+ }
+ #apellidos{
+    position: absolute;
+    top: 16%;
+    left: 52%;
+    width: 41.8%;
+    height: 8%;
+    border: none;
+    background-color: none;
+    border-bottom: 1px solid black;
+ }
+ #direccion{
+    position: absolute;
+    top: 28%;
+    left: 5.7%;
+    width: 40%;
+    height: 8%;
+    border: none;
+    background-color: none;
+    border-bottom: 1px solid black;
+ }
+ #tel{
+    position: absolute;
+    top: 28%;
+    left: 52%;
+    width: 41.8%;
+    height: 8%;
+    border: none;
+    background-color: none;
+    border-bottom: 1px solid black;
+ }
+ #email{
+    position: absolute;
+    top: 40%;
+    left: 5.7%;
+    height: 8%;
+    width: 88%;
+    border: none;
+    background-color: none;
+    border-bottom: 1px solid black;
+ }
+ .info{
+    position: absolute;
+    top: 62%;
+    left: 5.7;
+    height: 25%;
+    width: 88%;
+    border: none;
+    background-color: none;
+    border-bottom: 1px solid black;
+ }
+ #esp{
+    position: absolute;
+    top: 50%;
+    left: 5.7;
+ }
+ #img-doctor{
+    position: absolute;
+    top: 90%;
+    left: 16.7;
+    background-color: #d4e3fc;
+    color: black;
+    border: none;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+ }
+ #enviar{
+    position: absolute;
+    top: 90%;
+    left: 80%;
+    background-color: #d4e3fc;
+    color: black;
+    border: none;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    height: 42px;
+ }
+ .select-css {
+    display: block;
+    font-size: 16px;
+    font-family: 'Verdana', sans-serif;
+    font-weight: 400;
+    color: #444;
+    line-height: 1.3;
+    padding: .4em 1.4em .3em .8em;
+    width: 400px;
+    max-width: 100%; 
+    box-sizing: border-box;
+    margin: 20px auto;
+    border: 1px solid #aaa;
+    box-shadow: 0 1px 0 1px rgba(0,0,0,.03);
+    border-radius: .3em;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: #fff;
+    background-repeat: no-repeat, repeat;
+    background-position: right .7em top 50%, 0 0;
+    background-size: .65em auto, 100%;
+  }
 
 .circulo1{
-    align-content: center;
+    
     background-color: #e8e8e8;
     width: 1050px;
     height: 300px;
     border-radius: 36px 36px 36px 36px; 
 }
 .circulo1-1{
-    
+   
     background-color: #aaaaaa;
     width: 220px;
     height: 240px;
@@ -91,37 +230,37 @@
     border-radius: 36px 36px 36px 36px;
 }
 .circulo5-1{
-   
+    position: absolute;
+    left: 13%;
+    top: 198.7%;
     background-color: #aaaaaa;
     width: 220px;
     height: 240px;
     border-radius: 36px 36px 36px 36px; 
 }
 .circulo1 p{
-    align-items: center;
+    
     font-family: 'Poppins';
 }
 .circulo1 b{
-    text-align: center;
+    
     font-family: 'Poppins';
     font-size: 19px;
 }
 .circulo1 h5{
-    text-align: center;
+   
     font-family: 'Poppins';
     font-size: 16px;
 }
 .btn-gestionar{
-   /* position: absolute;
-    top:80%;
-    left: 67.3%;*/
+    
     cursor: pointer;
     border-radius: 5px;
     border: none;
     font-size: 17px;
     width: 15%;
     height: 12%;
-    font-family: 'Poppins', 'Regular' ;
+    font-family: 'Poppins', 'Regular';
     color: white;
     background-color: #033076;
 }
@@ -165,6 +304,10 @@
     color: white;
     background-color: #033076;
 }
+.btn-gestionar2 a{
+    text-decoration: none;
+    color: white;
+}
 .circulo3 p{
     position: absolute;
     top: 10%;
@@ -198,6 +341,10 @@
     font-family: 'Poppins', 'Regular';
     color: white;
     background-color: #033076;
+}
+.btn-gestionar3 a{
+    text-decoration: none;
+    color: white;
 }
 .circulo4 p{
     position: absolute;
@@ -233,6 +380,10 @@
     color: white;
     background-color: #033076;
 }
+.btn-gestionar4 a{
+    text-decoration: none;
+    color: white;
+}
 .circulo5 p{
     position: absolute;
     top: 10%;
@@ -267,15 +418,20 @@
     color: white;
     background-color: #033076;
 }
-.agregar{
+.btn-gestionar5 a{
+    text-decoration: none;
+    color: white;
+}
+.btn-abrir-ventanaE{
     font-size: 50px;
     position: absolute;
     top: 225%;
     left: 90%;
+    background: none;
+    border: none;
 }
-.agregar a{
+.btn-abrir-ventanaE a{
     color: #033076;
-    text-decoration: none;
 }
 .iconousuario a{
     position: absolute;
@@ -293,9 +449,98 @@
     color: #033076;
     z-index: 3;
 }
+/* .formulario div .btn-abrir-ventanaE{
+    padding: 0 20px;
+	margin-bottom: 20px;
+	height: 40px;
+	line-height: 40px;
+	border: none;
+	color: #fff;
+	background: #5E7DE3;
+	border-radius: 3px;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 16px;
+	cursor: pointer;
+	transition: .3s ease all;
+	cursor: pointer;
+}
+.formulario div .btn-abrir-ventanaE:hover {
+	background: rgba(94,125,227, .9);
+}
+.formulario.active {
+	visibility: visible;
+}
+.popup {
+	background: #F8F8F8;
+	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.3);
+	border-radius: 3px;
+	font-family: 'Montserrat', sans-serif;
+	padding: 20px;
+	text-align: center;
+	width: 600px;
+	
+	transition: .3s ease all;
+	transform: scale(0.7);
+	opacity: 0;
+}
 
-.col-md-5 button a{
-    text-decoration: none;
-    color: white;
-    }
-    
+.popup .btn-cerrar-popup {
+	font-size: 16px;
+	line-height: 16px;
+	display: block;
+	text-align: right;
+	transition: .3s ease all;
+	color: #BBBBBB;
+}
+
+.popup .btn-cerrar-popup:hover {
+	color: #000;
+}
+
+.popup h3 {
+	font-size: 36px;
+	font-weight: 600;
+	margin-bottom: 10px;
+	opacity: 0;
+}
+
+.popup h4 {
+	font-size: 26px;
+	font-weight: 300;
+	margin-bottom: 40px;
+	opacity: 0;
+}
+
+.popup form .contenedor-inputs {
+	opacity: 0;
+}
+
+.popup form .contenedor-inputs input {
+	width: 100%;
+	margin-bottom: 20px;
+	height: 52px;
+	font-size: 18px;
+	line-height: 52px;
+	text-align: center;
+	border: 1px solid #BBBBBB;
+}
+
+.popup form .btn-submit {
+	padding: 0 20px;
+	height: 40px;
+	line-height: 40px;
+	border: none;
+	color: #fff;
+	background: #5E7DE3;
+	border-radius: 3px;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 16px;
+	cursor: pointer;
+	transition: .3s ease all;
+}
+
+.popup form .btn-submit:hover {
+	background: rgba(94,125,227, .9);
+} */
+
+
